--- a/Controls/CardControl.xaml
+++ b/Controls/CardControl.xaml
@@ -26,7 +26,7 @@
                             }"
                         >
                             <ContentPresenter Margin="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-                            </Border>
+                        </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter TargetName="border" Property="BorderBrush" Value="{Binding HoverColor}" />
@@ -81,6 +81,13 @@
                     </Label>
                 </Grid>
             </Button>
+        </Viewbox>
+        <Viewbox 
+            Opacity="0.6" 
+            Visibility="{Binding UnTapVisibility, UpdateSourceTrigger=PropertyChanged}" 
+            IsHitTestVisible="False"
+        >
+            <Image Margin="30" Source="/img/tap.png"/>
         </Viewbox>
     </Grid>
 </local:MPDControl>
