--- a/Windows/CardViewer.xaml
+++ b/Windows/CardViewer.xaml
@@ -1,4 +1,4 @@
-﻿<Window 
+﻿<local:BaseWindow 
     x:Class="MTGProxyDesk.Windows.CardViewer"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -83,4 +83,4 @@
             </ScrollViewer>
         </DockPanel>
     </Border>
-</Window>
+</local:BaseWindow>
