--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -1,15 +1,15 @@
-﻿<Window 
-    x:Class="MTGProxyDesk.MainWindow"
+﻿<local:BaseWindow 
+    x:Class="MTGProxyDesk.Windows.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     WindowStartupLocation="CenterScreen"
-    xmlns:local="clr-namespace:MTGProxyDesk"
+    xmlns:local="clr-namespace:MTGProxyDesk.Windows"
     mc:Ignorable="d"
     Title="MTG Proxy Desk" Height="450" Width="800"
 >
     <Grid>
         <Frame Name="MainFrame" Source="../Pages/StartPage.xaml" NavigationUIVisibility="Hidden"></Frame>
     </Grid>
-</Window>
+</local:BaseWindow>
